Updated everything except persistence.

--- a/src/main/webapp/law.html
+++ b/src/main/webapp/law.html
@@ -20,7 +20,7 @@
 
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
-    <!-- If you add any GWT meta tags, they must   -->
+    <!-- If you set any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
     <script type="text/javascript" language="javascript" src="law/law.nocache.js"></script>
